--- a/README
+++ b/README
@@ -14,4 +14,7 @@ https://en.wikipedia.org/wiki/Frequency_illusion
 # messenger RNA
 https://en.wikipedia.org/wiki/Messenger_RNA
 
+# slavery
+https://en.wikipedia.org/wiki/Slavery
+
 media park ® 2002-2021
