--- a/README
+++ b/README
@@ -14,6 +14,9 @@ https://en.wikipedia.org/wiki/Frequency_illusion
 # messenger RNA
 https://en.wikipedia.org/wiki/Messenger_RNA
 
+# sensory nervous system
+https://en.wikipedia.org/wiki/Sensory_nervous_system
+
 # slavery
 https://en.wikipedia.org/wiki/Slavery
 
