--- a/README
+++ b/README
@@ -20,4 +20,7 @@ https://en.wikipedia.org/wiki/Sensory_nervous_system
 # slavery
 https://en.wikipedia.org/wiki/Slavery
 
+# buddhism
+https://en.wikipedia.org/wiki/Buddhism
+
 media park ® 2002-2021
